# bbufr

./: .gitignore  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
lib/: Makefile.am  Makefile.in  bufr.c  bufr.h  bufr_io.c  bufr_io.h  config.h.in  desc.c  rlenc.c
packaging/: build_package.sh
packaging/centos/: bbufr.spec
packaging/debian/: bbufr.install  changelog  control  copyright  rules  series
tables/: Makefile.am  Makefile.in  bufrtabb_11.csv  bufrtabb_12.csv  bufrtabb_13.csv  bufrtabb_15.csv  bufrtabb_16.csv  bufrtabb_2.csv  bufrtabb_6.csv  bufrtabd_11.csv  bufrtabd_13.csv  bufrtabd_15.csv  bufrtabd_16.csv  bufrtabd_2.csv  bufrtabd_6.csv  localtabb_247_9.csv  localtabb_85_1.csv  localtabb_85_10.csv  localtabb_85_12.csv  localtabb_85_14.csv  localtabb_85_2.csv  localtabd_247_9.csv  localtabd_85_10.csv  localtabd_85_12.csv  localtabd_85_14.csv  localtabd_85_2.csv
tests/: 200906150321_t1  200906150323_t2  200906150325_t3  Makefile.am  Makefile.in  RAD_NL60_VOL_OP_200705211200.h5  T_PAGZ43_C_EFKL_20101217061505.h5_v2.1  abbeville-200512271800.bfr  antilles-CMO-ref.bfr  antilles.bfr  bufr2hdf5.c  build-antilles.c  build-compo-cumul.c  build-composite.c  build-cumul.c  build-local.c  build-odim-compo.c  build-odim-polar.c  build-polar.c  build-wrwp-OMM.c  build-wrwp.c  comp2hdf5.c  compo.h  composite-ref.bfr  cumul-abbeville-200512271800.bfr  cumul.bfr  decbufr.c  french-200010301300.bfr  hdf2bufr.c  hdf2comp.c  local.bfr  log  odim-polar-ref.bfr  odim.c  odim.h  otan2comp.c  pdh2comp.c  polar-20040619.bfr  polar.bfr  polar.h  (+4 more)
tests/Austria/: ._example_odim_200906101315.bfr  example_odim_200906101315.bfr  example_odim_200906101315.h5  example_odim_200906101315.h5dump  example_odim_200906101315_optimized.h5
view/: Makefile.am  Makefile.in  bufr2view-cart.c  bufr2view.c  comp2view.c
